# GPFrame

./: CHANGELOG.md  LICENSE  README.md  RFC-REVIEW-ir-lifting-v3.md
GPFrame_sigma-v14/: Cargo.toml  README.md
GPFrame_sigma-v14/crates/cli/: Cargo.toml
GPFrame_sigma-v14/crates/cli/src/: discharge.rs  emit.rs  extract.rs  lib.rs  lift.rs  main.rs  pipeline.rs  refactor.rs  trial.rs
GPFrame_sigma-v14/crates/cli/tests/: audit_test.rs  diamond_test.rs  emission_gate_test.rs  lift_e2e_test.rs  lift_p2_test.rs  real_code_test.rs  v14_eq_ne_exp2_test.rs
GPFrame_sigma-v14/crates/gp/src/: fitness.rs
GPFrame_sigma-v14/crates/gp/tests/: r5_end_to_end.rs
GPFrame_sigma-v14/crates/harness/: Cargo.toml
GPFrame_sigma-v14/crates/harness/src/: strategy.rs
GPFrame_sigma-v14/crates/jit/src/: hot.rs  lower.rs
GPFrame_sigma-v14/crates/locate/src/: ochiai.rs  report.rs  spectrum.rs
GPFrame_sigma-v14/crates/memo/src/: cache.rs
GPFrame_sigma-v14/crates/mutate/src/: eqfilter.rs  pin.rs
GPFrame_sigma-v14/crates/rules/src/: extract.rs  lang.rs  r_approx.rs
GPFrame_sigma-v14/crates/rules/tests/: r2_smoke.rs
GPFrame_sigma-v14/crates/term/: Cargo.toml
GPFrame_sigma-v14/crates/term/src/: ast.rs  hash.rs  interp.rs  sexpr.rs  sig.rs
GPFrame_sigma-v14/docs/: DEEP-DIVE.md  FIELD-TRIAL.md  RFC-REVIEW-ir-lifting-v3.md  STATUS.md
GPFrame_sigma-v20-concurrency-fix/: Cargo.toml  README.md  poly_certified.rs  try.sh
GPFrame_sigma-v20-concurrency-fix/.github/workflows/: ci.yml  deep-verify.yml  release.yml
GPFrame_sigma-v20-concurrency-fix/crates/cli/src/: calib.rs  emit.rs  extract.rs  lib.rs  lift.rs  main.rs  optimize.rs  pipeline.rs  trial.rs
GPFrame_sigma-v20-concurrency-fix/crates/cli/tests/: concurrency_regress_test.rs  corpus2_findings_test.rs  f32_test.rs  fold_v12_test.rs  len_v13_test.rs  lift_p1_test.rs  lift_p2_test.rs  multiacc_test.rs  optimize_test.rs  pipelines_test.rs  receiver_methods_test.rs  trial_test.rs  user_polynomial_test.rs
GPFrame_sigma-v20-concurrency-fix/crates/gp/src/: evolve.rs  refine.rs  repair.rs
GPFrame_sigma-v20-concurrency-fix/crates/harness/src/: cert.rs  gate.rs
GPFrame_sigma-v20-concurrency-fix/crates/harness/tests/: r1_smoke.rs
GPFrame_sigma-v20-concurrency-fix/crates/jit/src/: lower.rs
GPFrame_sigma-v20-concurrency-fix/crates/locate/: Cargo.toml
GPFrame_sigma-v20-concurrency-fix/crates/locate/src/: lib.rs
GPFrame_sigma-v20-concurrency-fix/crates/locate/tests/: r4_smoke.rs
GPFrame_sigma-v20-concurrency-fix/crates/memo/src/: evict.rs  lib.rs
GPFrame_sigma-v20-concurrency-fix/crates/mutate/: Cargo.toml
GPFrame_sigma-v20-concurrency-fix/crates/mutate/src/: lib.rs  ops.rs  score.rs
GPFrame_sigma-v20-concurrency-fix/crates/rules/: Cargo.toml
GPFrame_sigma-v20-concurrency-fix/crates/rules/src/: cost.rs  lang.rs  lib.rs  r_sem.rs
GPFrame_sigma-v20-concurrency-fix/crates/sdk/: Cargo.toml
GPFrame_sigma-v20-concurrency-fix/crates/sdk/examples/: fieldtrial_ext_determinism.rs  fieldtrial_peephole_fuzz.rs  fieldtrial_suggester_fuzz.rs
GPFrame_sigma-v20-concurrency-fix/crates/sdk/src/: lib.rs  plugins.rs
GPFrame_sigma-v20-concurrency-fix/crates/sdk/tests/: ext_test.rs  phase1_test.rs  plugins_test.rs  suggester_test.rs
GPFrame_sigma-v20-concurrency-fix/crates/server/: Cargo.toml
GPFrame_sigma-v20-concurrency-fix/crates/server/src/: lib.rs  main.rs
GPFrame_sigma-v20-concurrency-fix/crates/server/tests/: http_test.rs
GPFrame_sigma-v20-concurrency-fix/crates/term/examples/: fieldtrial_rnd32.rs
GPFrame_sigma-v20-concurrency-fix/crates/term/src/: ast.rs  ext.rs  hash.rs  interp.rs  lib.rs  sexpr.rs  sig.rs
GPFrame_sigma-v20-concurrency-fix/docs/: API.md  HISTORY.md  SDK-ROADMAP.md  SDK.md
GPFrame_sigma-v20-concurrency-fix/examples/: demo.rs
gpframe/: Makefile  README.md
gpframe/crates/cli/src/: audit.rs  debug.rs  emit.rs  extract.rs  gentest.rs  lib.rs  main.rs  pipeline.rs  refactor.rs
gpframe/crates/cli/tests/: audit_test.rs  finding7_nan_portability.rs  fold_v12_test.rs  imperative_kernels_test.rs  real_code_test.rs
gpframe/crates/gp/: Cargo.toml
gpframe/crates/gp/src/: lib.rs  pop.rs
gpframe/crates/harness/src/: cert.rs  gate.rs  lib.rs  metric.rs  shrink.rs  strategy.rs
gpframe/crates/jit/: Cargo.toml
gpframe/crates/jit/src/: install.rs  lib.rs  lower.rs
gpframe/crates/jit/tests/: r7_smoke.rs
gpframe/crates/memo/: Cargo.toml
gpframe/crates/memo/src/: cache.rs
gpframe/crates/memo/tests/: r6_smoke.rs
gpframe/crates/mutate/src/: ops.rs
gpframe/crates/mutate/tests/: r3_smoke.rs
gpframe/crates/rules/src/: cost.rs  lang.rs  lib.rs  r_approx.rs  r_dec.rs  smt.rs
gpframe/crates/term/src/: ast.rs  hash.rs  interp.rs  lib.rs  sexpr.rs  sig.rs
gpframe/crates/term/tests/: r0_smoke.rs
gpframe/docs/: STATUS.md
