# deductive-gp-engine — workspace root
#
# Build order = topological order of the dependency DAG (spec v2.1 AST):
#   term -> harness -> {rules, mutate, locate, gp} -> memo(term only), jit -> cli
#
# Inversions forbidden:
#   * term depends on NOTHING
#   * harness never depends on rules/gp (the judge must not import the contestants)
#
# The skeleton compiles with ZERO external crates. Production backends are
# swapped in behind trait seams at the phase where their obligation is
# discharged (see each crate's Cargo.toml for the commented dependency).

[workspace]
resolver = "2"
members = [
    "crates/term",    # R0  D1 D2 O5
    "crates/harness", # R1  T3 T4 D6 O3 O8
    "crates/rules",   # R2  D3 T1 O1 O2 O4
    "crates/mutate",  # R3  D5 T5
    "crates/locate",  # R4  §4.3
    "crates/gp",      # R5  D7 T7
    "crates/memo",    # R6  D8 T6
    "crates/jit",     # R7  L1 O7
    "crates/cli",     # R7  T8
    "crates/sdk",     # R8  integration surface (doors/hooks; gate stays sealed)
    "crates/server",  # R9  HTTP isolation boundary over the SDK
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
