[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dge"
path = "src/main.rs"

[dependencies]
term = { path = "../term" }
harness = { path = "../harness" }
rules = { path = "../rules" }
mutate = { path = "../mutate" }
locate = { path = "../locate" }
gp = { path = "../gp" }
memo = { path = "../memo" }
jit = { path = "../jit" }
quote = "1"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[lib]
name = "cli"
path = "src/lib.rs"
