[package]
name = "jit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
term = { path = "../term" }
harness = { path = "../harness" }
cranelift-codegen = "0.110"
cranelift-frontend = "0.110"
cranelift-jit = "0.110"
cranelift-module = "0.110"
cranelift-native = "0.110"
# transcendentals/min/max -> extern "C" wrappers over the SAME Rust methods
# the interpreter uses (bitwise agreement by construction; libm identity
# pinned by the O8 fingerprint)
